--- a/src/ui/react/weg/styles/global.css
+++ b/src/ui/react/weg/styles/global.css
@@ -200,4 +200,5 @@ body {
 
 .ant-popover-container {
   padding: 0 !important;
+  background-color: transparent !important;
 }
